# devdocs

./: .gitignore  README.md  devdocs.yml  docs-service.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: cli.py  config.py  main.py
docs/: index.md
